# tower-embed

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/tower-embed-core/: Cargo.toml
crates/tower-embed-core/src/: headers.rs  http.rs  lib.rs
crates/tower-embed-core/src/headers/: content_type.rs  etag.rs  last_modified.rs
crates/tower-embed-impl/: Cargo.toml
crates/tower-embed-impl/src/: lib.rs
examples/axum/: Cargo.toml
examples/axum/src/: main.rs
examples/custom-404/: Cargo.toml
examples/custom-404/assets/: 404.html  index.html
examples/custom-404/src/: main.rs
src/: file.rs  headers.rs  lib.rs  response.rs
src/headers/: content_type.rs  etag.rs  if_modified_since.rs  if_none_match.rs  last_modified.rs
