[workspace]
members = [".", "crates/*", "examples/*"]

[workspace.package]
authors = ["Mattia Penati <mattia.penati@protonmail.com>"]
edition = "2024"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/mattiapenati/tower-embed"
repository = "https://github.com/mattiapenati/tower-embed"

[workspace.dependencies]
tower-embed = { path = "." }
tower-embed-core = { path = "crates/tower-embed-core" }
tower-embed-impl = { path = "crates/tower-embed-impl" }

[package]
name = "tower-embed"
version = "0.2.0"
description = "Tower service to serve embedded assets"
keywords = ["tower", "http", "static"]
documentation = "https://docs.rs/tower-embed"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
autoexamples = false

[dependencies]
bytes = "1.11.0"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
tower-embed-core.workspace = true
tower-embed-impl.workspace = true
tower-service = "0.3.3"
