[workspace]
members = [".", "crates/*", "examples/*"]

[workspace.package]
authors = ["Mattia Penati <mattia.penati@protonmail.com>"]
edition = "2024"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/mattiapenati/tower-embed"
repository = "https://github.com/mattiapenati/tower-embed"

[workspace.dependencies]
tower-embed = { path = "." }
tower-embed-core = { path = "crates/tower-embed-core" }
tower-embed-impl = { path = "crates/tower-embed-impl" }

[package]
name = "tower-embed"
version = "0.3.0"
description = "Tower service to serve embedded assets"
keywords = ["tower", "http", "static"]
documentation = "https://docs.rs/tower-embed"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
autoexamples = false

[dependencies]
bytes = "1.11.0"
futures-core = "0.3.31"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
tokio = { version = "1.49.0", optional = true, features = ["fs"] }
tokio-util = { version = "0.7.18", optional = true, features = ["io"] }
tower-embed-core.workspace = true
tower-embed-impl.workspace = true
tower-service = "0.3.3"

[features]
default = ["tokio"]
tokio = ["dep:tokio", "dep:tokio-util"]
