[package]
name = "tower-embed-core"
description = "Core functionalities of tower-embed"
version = "0.1.0"
documentation = "https://docs.rs/tower-embed-core"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
bytes = "1.11.0"
futures-core = "0.3.31"
http = "1.4.0"
http-body = "1.0.1"
httpdate = "1.0.3"
mime = "0.3.17"
mime_guess = "2.0.5"
rapidhash = "4.2.1"
