[package]
name = "tower-embed-impl"
description = "Implementation of macros for tower-embed"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
camino = "1.2.2"
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = "2.0.114"
tower-embed-core.workspace = true
walkdir = "2.5.0"
