[package]
name = "example-custom-404"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
publish = false

[dependencies]
axum = "0.8.8"
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = { version = "2.0.114", features = ["full"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-embed.workspace = true
